--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
-DB_USER=postgres
-DB_PASS=root
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
-DB_NAME=postgres
+DB_USER=postgres
+DB_NAME=mailings_app
+DB_PASS=postgres
 
-REDIS_PORT=localhost
+POSTGRES_DB=mailings_app
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+
+REDIS_PORT=redis
 REDIS_HOST=6379
