--- a/.env
+++ b/.env
@@ -10,3 +10,9 @@ POSTGRES_PASSWORD=postgres
 
 REDIS_PORT=redis
 REDIS_HOST=6379
+
+
+HOST_SMTP = smtp.gmail.com
+PORT_SMTP = 465
+EMAIL_SENDER = our email
+PASSWORD = our password
